--- a/components/drop/DropArea.module.scss
+++ b/components/drop/DropArea.module.scss
@@ -7,15 +7,16 @@
   border: 0.2rem dashed whitesmoke;
   border-radius: 10%;
   width: 70vw;
-  max-width: 500px;
-  height: 70vh;
-  max-height: 500px;
+  max-width: 400px;
+  height: 70vw;
+  max-height: 400px;
   margin-top: 3.5rem;
   z-index: 50;
   box-shadow: 0 0 3rem rgba(1, 145, 100);
 }
 
 .dropArea_inactive {
+  opacity: 1;
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -23,9 +24,9 @@
   border: 0.15rem dotted whitesmoke;
   border-radius: 10%;
   width: 70vw;
-  max-width: 500px;
-  height: 70vh;
-  max-height: 500px;
+  max-width: 400px;
+  height: 70vw;
+  max-height: 400px;
   margin-top: 3.5rem;
 }
 
