--- a/components/search/SearchBar.module.scss
+++ b/components/search/SearchBar.module.scss
@@ -28,12 +28,7 @@
 }
 
 .searchIcon {
-  top: 50%;
-  transform: translate(0, 110%);
-  padding: 0 0.5rem 0 1rem;
-  color: whitesmoke;
-  font-size: 1.1rem;
-  padding-right: 0.8rem;
+  padding: 1.2rem 0.8rem 0 1rem;
 }
 
 .searchIconWrapped {
